--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Dependencies
-markdown:         redcarpet
+markdown:         kramdown
 highlighter:      pygments
 
 # Permalinks
@@ -16,8 +16,8 @@ author:
   name:           'Eliseo Papa'
   url:            'http://www.eliseopapa.org'
 
-paginate:         5
-# paginate_path: "blog/page:num"
+paginate:         2
+paginate_path:    "blog/page:num"
 
 # Custom vars
 repo:             "http://github.com/elipapa/elipapa.github.io"
