--- a/_config.yml
+++ b/_config.yml
@@ -4,21 +4,19 @@ highlighter:      pygments
 
 # Permalinks
 permalink:        pretty
-relative_permalinks: true
 
 # Setup
 title:            Eliseo Papa
 tagline:          'Thoughts, ideas and projects. Here so they can be safely ignored.'
 description:      'Biomedical engineer, computational biologist, doctor'
-baseurl:          "http://elipapa.github.io"
-production_url:   'http://www.eliseopapa.org'
+production_url:   'http://elipapa.github.io'
 
 author:
   name:           'Eliseo Papa'
-  url:            'http://www.eliseopapa.org'
+  url:            'http://elipapa.github.io'
 
-paginate:         3
-paginate_path:    "blog/:num"
+# paginate:         3
+# paginate_path:    "blog/:num"
 
 # Custom vars
 repo:             "http://github.com/elipapa/elipapa.github.io"
