--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Dependencies
 markdown:         kramdown
-highlighter:      pygments
+# highlighter:      rouge
 
 # Permalinks
 permalink:        /blog/:categories/:title.html
