fixed linkedin url

--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ twitter: elipapa
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
-linkedin: https://www.linkedin.com/in/eliseopapa/?ppe=1
+linkedin: eliseopapa
 # youtube: myyoutube
 spotify: vivissima
 github: elipapa
