point to extended

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ logo: assets/images/elipapa-calder-logo-circ-invert.png
 # and specify source (external or local).
 resume: true
 resume-external: true
-resume-url: https://elipapa.github.io/mycv
+resume-url: https://elipapa.github.io/mycv/extended
 
 url: https://elipapa.github.io
 # your url: http://USERNAME.github.io
